{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 8,
  "lineage": "b4818fcd-b615-f611-79e2-67d29155b19f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zeinab-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0008aa5cb0cde3400",
            "get_password_data": false,
            "id": "i-0cc21ebaf1a7ce44d",
            "instance_type": "t2.micro",
            "key_name": "zeinab-public-key",
            "security_groups": [
              "sg-0c2c11bc69963f7be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03617d2398515c0fc",
            "tags": {
              "Name": "zeinab-bastion"
            },
            "tags_all": {
              "Name": "zeinab-bastion"
            },
            "user_data_replace_on_change": false
          },
          "dependencies": [
            "aws_key_pair.zeinab-public-key",
            "aws_security_group.zeinab-security-group1",
            "data.aws_ami.ubuntu",
            "local_file.private_key_file",
            "module.network.aws_subnet.zeinab-public-subnet",
            "module.network.aws_vpc.zeinab-vpc",
            "tls_private_key.zeinab-private-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zeinab-security-group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:security-group/sg-0c2c11bc69963f7be",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0c2c11bc69963f7be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "zeinab-security-group1",
            "name_prefix": "",
            "owner_id": "767397866913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zeinab-security-group1"
            },
            "tags_all": {
              "Name": "zeinab-security-group1"
            },
            "timeouts": null,
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zeinab-security-group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:security-group/sg-09a750f1a85b82dc4",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-09a750f1a85b82dc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "zeinab-security-group2",
            "name_prefix": "",
            "owner_id": "767397866913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zeinab-security-group2"
            },
            "tags_all": {
              "Name": "zeinab-security-group2"
            },
            "timeouts": null,
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zeinab-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:internet-gateway/igw-08833929427c64053",
            "id": "igw-08833929427c64053",
            "owner_id": "767397866913",
            "tags": {
              "Name": "zeinab-gw"
            },
            "tags_all": {
              "Name": "zeinab-gw"
            },
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "dependencies": [
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zeinab-private-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:route-table/rtb-09ec8351b0181e079",
            "id": "rtb-09ec8351b0181e079",
            "owner_id": "767397866913",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "zeinab-private-route-table-1"
            },
            "tags_all": {
              "Name": "zeinab-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zeinab-private-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:route-table/rtb-019387e84e101245e",
            "id": "rtb-019387e84e101245e",
            "owner_id": "767397866913",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "zeinab-private-route-table-2"
            },
            "tags_all": {
              "Name": "zeinab-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zeinab-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:route-table/rtb-0bf7b9e585120932f",
            "id": "rtb-0bf7b9e585120932f",
            "owner_id": "767397866913",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08833929427c64053",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zeinab-public-route-table"
            },
            "tags_all": {
              "Name": "zeinab-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.zeinab-gw",
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04077e93aca61d27c",
            "route_table_id": "rtb-019387e84e101245e",
            "subnet_id": "subnet-02a6955884f6226ff"
          },
          "dependencies": [
            "module.network.aws_route_table.zeinab-private-rt-2",
            "module.network.aws_subnet.zeinab-private-subnet-2",
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0542b795bc53c6753",
            "route_table_id": "rtb-0bf7b9e585120932f",
            "subnet_id": "subnet-03617d2398515c0fc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.zeinab-gw",
            "module.network.aws_route_table.zeinab-public-rt",
            "module.network.aws_subnet.zeinab-public-subnet",
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zeinab-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:subnet/subnet-02a6955884f6226ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a6955884f6226ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397866913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zeinab-private-subnet2"
            },
            "tags_all": {
              "Name": "zeinab-private-subnet2"
            },
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "dependencies": [
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zeinab-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:subnet/subnet-03617d2398515c0fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03617d2398515c0fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397866913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zeinab-public-subnet"
            },
            "tags_all": {
              "Name": "zeinab-public-subnet"
            },
            "vpc_id": "vpc-045c51042d17bc44b"
          },
          "dependencies": [
            "module.network.aws_vpc.zeinab-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zeinab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397866913:vpc/vpc-045c51042d17bc44b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09cfd7c3bb066af32",
            "default_route_table_id": "rtb-06a7b8f6f06862a7e",
            "default_security_group_id": "sg-02a0638fe3308184b",
            "dhcp_options_id": "dopt-0c5acbad65450608f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045c51042d17bc44b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a7b8f6f06862a7e",
            "owner_id": "767397866913",
            "tags": {
              "Name": "zeinab-vpc"
            },
            "tags_all": {
              "Name": "zeinab-vpc"
            }
          }
        }
      ]
    }
  ]
}